Fix style to make it aligned according to the requieremnts

--- a/src/style/Book.module.css
+++ b/src/style/Book.module.css
@@ -6,10 +6,19 @@
   align-items: center;
 }
 
+.progressDiv {
+  position: absolute;
+  right: 40%;
+}
+
 .bookTitle,
 .bookLinks,
 .chapter {
   font-family: 'Roboto', sans-serif;
+}
+
+.chapter {
+  padding-right: 6rem;
 }
 
 .bookCategory,
@@ -22,7 +31,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 24px 35px;
-  margin: 16px 68px;
+  margin: 1rem 7rem;
   border: 1px solid #e8e8e8;
 }
 
@@ -42,12 +51,20 @@
   font-size: 15px;
   color: #4386bf;
   font-weight: 100;
-  margin-right: 9px;
+  margin-right: 0.7rem;
+}
+
+.comments {
+  font-size: 15px;
+  color: #4386bf;
+  font-weight: 100;
+  margin-right: 1.5rem;
 }
 
 .removeBook {
   background-color: #fff;
   border: none;
+  padding: 0;
 }
 
 .completionPercentage {
